# tcc_puc

./: .gitignore  Makefile  README.md  docker-compose.yml
deliveries_api/: Dockerfile  pyproject.toml
deliveries_api/apps/deliveries/: models.py
deliveries_api/deliveries_api/apps/deliveries/: models.py  serializers.py  viewsets.py
deliveries_api/deliveries_api/apps/deliveries/migrations/: 0001_creating_deliveries_models.py  0002_fix_wrong_models.py  0003_add_status_quatation.py  0009_set_freight_price_nullable.py  0010_add_new_status.py  0012_remove_type.py
deliveries_api/deliveries_api/deliveries_api/: asgi.py  kafka_config.py  settings.py  urls.py
infa/k8s/: deliveries-api.yaml  deliveries-postgresql.yaml  ingress.yaml  kafka.deployment.yaml  kafka.service.yaml  kafka.yaml  legacy-system-postgresql.yaml  legacy-system.yaml  partner-routes-api.yaml  partner-routes-postgresql.yaml  pooling_system.yaml  zookeeper.deployment.yaml  zookeeper.service.yaml  zookeeper.yaml  zpl-generate-service.yaml
infra/azure/: k8s_cluster.md
infra/k8s/: deliveries-api.yaml  ingress.yaml  legacy-system.yaml  new-partner-routes-service.yaml  (+3 more)
legacy_system/: Dockerfile  gunicorn_config.py  pyproject.toml
legacy_system/legacy/apps/deliveries/: models.py
legacy_system/legacy/apps/deliveries/management/commands/: change_delivery_status_to_in_transit.py  create_delivery.py  create_partner.py  create_partner_routes.py
legacy_system/legacy/apps/deliveries/migrations/: 0001_create_delivery_models.py  0001_initial.py  0002_create_partner_models.py  0003_add_nullable_fields.py  0003_set_freight_price_nullable.py  0004_add_delivery_type.py  0005_add_partner_to_delivery.py  0006_fix_wrong_models.py  0007_add_status_quatation.py
legacy_system/legacy/legacy/: settings.py  urls.py
legacy_system/legacy/tests/: factories.py
new_partner_routes_service/: local.env
partner_routes_api/: Dockerfile  pyproject.toml
partner_routes_api/partner_routes_api/apps/routes/: models.py  serializers.py  viewsets.py
partner_routes_api/partner_routes_api/apps/routes/management/commands/: create_partner_routes.py
partner_routes_api/partner_routes_api/apps/routes/migrations/: 0001_initial.py  0002_change_column_name_from_partner_to_partner_id.py
partner_routes_api/partner_routes_api/partner_routes_api/: settings.py  urls.py
partner_routes_api/partner_routes_api/tests/: factories.py
pool_partner_price_service/: local.env  pyproject.toml
pooling_system/: Dockerfile  local.env  pyproject.toml
pooling_system/pooling_system/: __main__.py  models.py  pooling.py
pooling_system/tests/: test_pooling_system.py
projects/deliveries_api/: Dockerfile  local.env  pyproject.toml
projects/deliveries_api/deliveries_api/: manage.py
projects/deliveries_api/deliveries_api/apps/deliveries/: serializers.py  viewsets.py
projects/deliveries_api/deliveries_api/apps/deliveries/migrations/: 0001_creating_deliveries_models.py  0002_fix_wrong_models.py  0004_add_zpl_model_with_historical_records.py  0005_add_delivery_model_historical.py  0006_change_away_add_one_to_one_with_zpl.py  0007_add_unique_to_zpl.py  0008_change_to_partner_route_id.py  0011_add_another_process.py
projects/deliveries_api/deliveries_api/deliveries_api/: settings.py  urls.py  wsgi.py
projects/legacy_system/: Dockerfile  local.env  pyproject.toml
projects/legacy_system/legacy/apps/deliveries/: forms.py  models.py  partner_routes_urls.py  urls.py  views.py
projects/legacy_system/legacy/apps/deliveries/management/commands/: create_delivery.py
projects/legacy_system/legacy/apps/deliveries/migrations/: 0002_change_to_partner_route.py  0004_set_unique_start_place_finish_place_and_partner.py
projects/legacy_system/legacy/apps/deliveries/templates/deliveries/: delivery_form.html  delivery_list.html
projects/legacy_system/legacy/apps/deliveries/templates/partner_routes/: list.html
projects/legacy_system/legacy/apps/deliveries/templates/site/: _head.html  _header.html  _js.html  _sidebarmenu.html  dashboard.html  login.html
projects/legacy_system/legacy/legacy/: asgi.py  settings.py  urls.py  wsgi.py
projects/legacy_system/legacy/tests/: factories.py
projects/new_partner_routes_service/: Dockerfile  local.env  pyproject.toml
projects/new_partner_routes_service/new_partner_routes_service/: __main__.py  handlers.py
projects/pool_partner_price_service/: Dockerfile  local.env  pyproject.toml
projects/pool_partner_price_service/pool_partner_price_service/: handlers.py
projects/pool_partner_price_service/tests/: test_pool_partner_price_service.py
zpl_generate_service/: local.env  pyproject.toml
zpl_generate_service/tests/: test_plp_generate_service.py
zpl_generate_service/zpl_generate_service/: __main__.py  handlers.py  zpl_generate.py
(+43 files in other folders)
