[tool.poetry]
name = "pooling_system"
version = "0.1.0"
description = ""
authors = ["Bernardo Gomes <bgomesdeabreu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.25"
prettyconf = "^2.2.1"
psycopg2 = "^2.9.1"
requests = "^2.26.0"
SQLAlchemy-serializer = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
