[tool.poetry]
name = "legacy_system"
version = "0.1.0"
description = ""
authors = ["Bernardo Gomes <bgomesdeabreu@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.7"
Django = "^3.2.7"
django-model-utils = "^4.1.1"
factory-boy = "^3.2.0"
prettyconf = "^2.2.1"
psycopg2 = "^2.9.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
